[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pylife-api"
authors = [{ name = "David Sn", email = "divad.nnamtdeis@gmail.com" }]
description = "Python API for Play Your Life v2 user panel."
readme = "README.md"
requires-python = ">=3.7"
keywords = ["pylife", "mta", "api"]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = ["aiohttp >=3.10.5,<4", "pydantic >=2.9.1,<3"]
dynamic = ["version"]

[project.optional-dependencies]
rapidjson = ["python-rapidjson >=1.20,<2"]

[project.urls]
Home = "https://github.com/mapapylife/python-pylife"
